<resources>
    <string name="app_name">Game Master Tools</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Game Master Tools</string>
    <string name="source_books">Source Books</string>

    <string name="second_fragment_label">Blood RPG</string>
    <string name="blood_battle_creation">Blood-Battle Creator</string>
    <string name="blood_battle_side">Blood-Battle Side</string>
    <string name="blood_source_books">Blood-Source Books</string>
    <string name="blood_healing">Blood-Healing Table</string>
    <string name="blood_dice_table">Blood-Dice Table</string>

    <string name="healing_table">Healing Table</string>
    <string name="battle_creator">Battle Creator</string>
    <string name="dice_table">Dice Table</string>

    <string name="third_fragment_label">Alien RPG</string>
    <string name="alien_source_books">Alien-Source Books</string>

    <string name="fourth_fragment_label">HotB RPG</string>

    <string name="blood">Blood n Honor</string>
    <string name="alien">Alien</string>
    <string name="house">Houses of the Blooded</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="go_main">Go to Main</string>
    <string name="developedBy">Developed by: Paweł Gałązka</string>
    <string name="imageLogoDescription">mainLogo</string>
    <string name="disc">-> In order to understand the app you should provide yourself with proper books</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="character_creation">Character creation</string>

    //Blood Battle
    <string name="createNewBattle">Create New Battle</string>
    <string name="withLeader">with Leader</string>
    <string name="onlyFighters">only Fighters</string>
    <string name="numberOfEnemies">Number of enemies</string>
    <string name="rankOfEnemies">Rank of enemies</string>

    <string name="virtueProwess">Pro:</string>
    <string name="virtueStrength">Str:</string>
    <string name="virtueCunning">Cun:</string>
    <string name="virtueCourage">Cou:</string>
    <string name="virtueWisdom">Wis:</string>
    <string name="virtueBeauty">Bea:</string>
    <string name="zeroPlacedHolder">0</string>
    <string name="namePlacedHolder">Here is my Name</string>
    <string name="initiativeRolled">IniR:</string>
    <string name="initiativeDices">IniD:</string>
    <string name="combatDices">Combat Dices:</string>
    <string name="rollInitiative">Roll Initiative</string>

    <string name="addWoundButton">wounds</string>


    //Books
    <string name="book_title_blood_and_honor">Blood and Honor</string>
    <string name="book_title_world_of_dew">World of Dew</string>
    <string name="book_title_sound_of_water">Sound of Water</string>

    <string name="book_title_house_of_the_blooded">House of the Blooded</string>
    <string name="book_title_house_of_the_blooded_coronets">House of the Blooded: Coronets</string>
    <string name="book_title_house_of_the_blooded_wilderness">House of the Blooded: Wilderness</string>

    <string name="book_title_alien_rpg">Alien RPG</string>
    <string name="book_title_alien_colonial_marines">Alien: Colonial Marines</string>
    <string name="book_title_alien_chariot_of_the_gods">Alien: Chariot of the Gods</string>
    <string name="book_title_alien_destroyer_of_the_worlds">Alien: Destroyer of the Worlds</string>
    <string name="book_title_alien_colony_wars">Colony Wars</string>
    <string name="book_title_alien_infernos_fall">Infernos Fall</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Blood Healing Table
    <string name="healing_wound_rank_one">Rank I</string>
    <string name="healing_wound_rank_two">Rank II</string>
    <string name="healing_wound_rank_three">Rank III</string>
    <string name="healing_wound_rank_four">Rank IV</string>
    <string name="healing_wound_rank_five">Rank V</string>
    <string name="healing_wound_rank_six">Rank VI</string>

    <string name="healing_infection_one">- none -</string>
    <string name="healing_infection_two">- none -</string>
    <string name="healing_infection_three">3D6 >= 10</string>
    <string name="healing_infection_four">4D6 >= 10</string>
    <string name="healing_infection_five">5D6 >= 10</string>
    <string name="healing_infection_six">6D6 >= 10</string>

    <string name="healing_first_aid_one">- none -</string>
    <string name="healing_first_aid_two">- none -</string>
    <string name="healing_first_aid_three">-1 Infection</string>
    <string name="healing_first_aid_four">-1 Infection</string>
    <string name="healing_first_aid_five">-1 Infection</string>
    <string name="healing_first_aid_six">-1 Infection</string>

    <string name="healing_medical_help_one">1 wage</string>
    <string name="healing_medical_help_two">2 wages</string>
    <string name="healing_medical_help_three">3 wages</string>
    <string name="healing_medical_help_four">4 wages</string>
    <string name="healing_medical_help_five">5 wages</string>
    <string name="healing_medical_help_six">6 wages</string>

    <string name="healing_healing_one">Day</string>
    <string name="healing_healing_two">Week</string>
    <string name="healing_healing_three">Month</string>
    <string name="healing_healing_four">Quarter</string>
    <string name="healing_healing_five">Year</string>
    <string name="healing_healing_six">Year</string>

    <string name="healing_modifications">Additional mod:</string>

    <string name="wound_rank">Wound Rank</string>
    <string name="infection_rate">Infection Rate</string>
    <string name="first_aid">First Aid</string>
    <string name="medical_help">Medical Help</string>
    <string name="healing">Healing</string>

    <string name="wound_one">1</string>
    <string name="wound_two">2</string>
    <string name="wound_three">3</string>
    <string name="wound_four">4</string>
    <string name="wound_five">5</string>
    <string name="wound_six">6</string>
    <string name="wound_seven">7</string>
    <string name="wound_eight">8</string>
    <string name="button_add_text">add</string>
    <string name="button_remove_text">rem</string>

    //Alien
    <string name="alien_armory_button">Armory</string>
    <string name="alien_random_item_button">Random item</string>
    <string name="alien_panic_roller_button">Panic Roll</string>
    <string name="alien_wound_roller_button">Wound Roll</string>
    <string name="alien_xeno_button">Xenos</string>

    <string name="alien_armory">Alien-Armory</string>
    <string name="alien_random_item_">Alien-Random item</string>
    <string name="alien_panic_roller">Alien-Panic Roll</string>
    <string name="alien_wound_roller">Alien-Wound Roll</string>
    <string name="alien_xeno">Alien-Xenos</string>

    <string name="alien_panic_roller_panic_level">Panic Level</string>
    <string name="alien_panic_roller_panic_roll_button">Panic Roll</string>

    <string name="alien_wound_roll_button">Wound Roll</string>
    <string name="alien_wound_roll_radio_button_original">Original roll ( [d6] +[ d6] )</string>
    <string name="alien_wound_roll_radio_button_low">Low roll ( [low] + [high] )</string>
    <string name="alien_wound_roll_radio_button_high">High roll ( [high] + [low] )</string>

    //Alien types
    <string name="alien_btn_abomination_b">Abomination B</string>
    <string name="alien_btn_abomination_e">Abomination E</string>
    <string name="alien_btn_anathema">Anathema</string>
    <string name="alien_btn_neomorph">Neomorph</string>
    <string name="alien_btn_xenomorph">Xenomorph</string>
    <string name="alien_btn_protomorph">Protomorph</string>
    <string name="alien_txt_type">Type:</string>
    <string name="alien_txt_name">Name:</string>
    <string name="alien_txt_health">Health:</string>
    <string name="alien_txt_armor">Armor:</string>
    <string name="alien_txt_speed">Speed:</string>
    <string name="alien_txt_mobility">Mobility:</string>
    <string name="alien_txt_observation">Observation:</string>
    <string name="alien_txt_virus">Virus:</string>
    <string name="alien_txt_virus_time">Time:</string>
    <string name="alien_txt_acid">Acid:</string>

    //Alien armory

    <string-array name="armory">
        <item>Original</item>
        <item>Original+</item>
        <item>Alien+</item>
        <item>Security+</item>
        <item>Pandora+</item>
        <item>Elysium+</item>
        <item>Kovac+</item>
        <item>Auraxis+</item>
    </string-array>


</resources>