<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.gamemastertools.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/BloodFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/AlienFragment" />
    </fragment>

    <fragment
        android:id="@+id/BloodFragment"
        android:name="com.example.gamemastertools.BloodFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_blood">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_blood_to_blood_source_books"
            app:destination="@id/BloodSourceBooks" />
        <action
            android:id="@+id/action_blood_to_blood_battle_creator"
            app:destination="@id/BloodBattleCreationFragment" />
        <action
            android:id="@+id/action_blood_to_blood_healing"
            app:destination="@id/BloodHealing" />
        <action
            android:id="@+id/action_blood_to_blood_dice_roll"
            app:destination="@id/BloodDiceRollTable" />

    </fragment>

    <fragment
        android:id="@+id/AlienFragment"
        android:name="com.example.gamemastertools.AlienFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_alien">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_blood_battle_create_and_go_side"
            app:destination="@id/AlienSourceBooks" />
    </fragment>

    <fragment
        android:id="@+id/BloodBattleCreationFragment"
        android:name="com.example.gamemastertools.BloodBattleCreation"
        android:label="@string/blood_battle_creation"
        tools:layout="@layout/fragment_blood_battle_creation">

        <action
            android:id="@+id/action_blood_battle_create_and_go_side"
            app:destination="@id/BloodBattleSide" />

    </fragment>

    <fragment
        android:id="@+id/BloodSourceBooks"
        android:name="com.example.gamemastertools.BloodSourceBook"
        android:label="@string/blood_source_books"
        tools:layout="@layout/fragment_blood_source_book">

    </fragment>

    <fragment
        android:id="@+id/AlienSourceBooks"
        android:name="com.example.gamemastertools.AlienSourceBook"
        android:label="@string/alien_source_books"
        tools:layout="@layout/fragment_alien_source_book">

    </fragment>

    <fragment
        android:id="@+id/BloodHealing"
        android:name="com.example.gamemastertools.BloodHealing"
        android:label="@string/healing_table"
        tools:layout="@layout/fragment_blood_healing">

    </fragment>

    <fragment
        android:id="@+id/BloodDiceRollTable"
        android:name="com.example.gamemastertools.BloodDiceRollTable"
        android:label="@string/blood_dice_table"
        tools:layout="@layout/fragment_blood_dice_roll_table">

        <action
            android:id="@+id/action_blood_dice_roll_to_blood"
            app:destination="@id/BloodFragment" />

    </fragment>

    <fragment
        android:id="@+id/BloodBattleSide"
        android:name="com.example.gamemastertools.BloodBattleSide"
        android:label="@string/blood_battle_side"
        tools:layout="@layout/fragment_blood_battle_side">

    </fragment>

</navigation>